# paint

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
.github/workflows/: cmake-single-platform.yml
_build/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
_build/.cmake/api/v1/reply/: cmakeFiles-v1-80d0b86cad6fcb328445.json  codemodel-v2-1fa61005cb46fa3aedb8.json  index-2024-05-08T01-51-08-0949.json  target-glfw-Debug-7f19ba65ea2dfa6fda21.json  target-imgui_glfw-Debug-3b845c00a28626af9637.json  target-stb_image-Debug-07f209712509515deda9.json  target-testimgui-Debug-897a272da8403e6b011f.json
_build/src/: cmake_install.cmake  imgui.ini
src/: CMakeLists.txt  application.cpp  application.h  main.cpp  types.h
src/brush/: brush.cpp  brush.h
src/canvas/: canvas.cpp  canvas.h
src/context/: draw_window.cpp  imgui_context.cpp  opengl_renderer.cpp  pixel_context.cpp  renderer.h
src/graphics/: framebuffer.cpp  framebuffer.h
src/paint/: imgui_paint.cpp  imgui_paint.h
src/paint/brush/: brush.cpp  brush.h
src/paint/widgets/: tools.cpp  tools.h  widget.h
src/paint/widgets/canvas/: canvas.cpp  canvas.h  colorpick_state.cpp  draw_state.cpp  idle_state.cpp  onclick_state.cpp
src/window/: opengl_window.cpp  opengl_window.h  window.cpp  window.h
src/window/imgui/: imgui_context.h  opengl3_glfw_context.cpp  opengl3_glfw_context.h
